[FIX] 헤더 드롭다운 메뉴 z-index 수정

--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -72,6 +72,7 @@
     width: 120px;
     text-align: center;
     line-height: 32px;
+    z-index: 99;
 
     li {
         border-top: 1px solid var(--c-green-3);
